--- a/sass/_768max.scss
+++ b/sass/_768max.scss
@@ -1,3 +1,14 @@
+/* @group ----- Global selectors ----- */
+
+#search-container {
+    clear: both;
+    width: 100%;
+    @include leader();
+    @include trailer(0);
+}
+
+/* @end */
+
 /* @group ----- Navigation ----- */
 
 #primary-nav { display: none; }
@@ -22,30 +33,45 @@
         overflow:hidden;
         width: 100%;
     }
-}
-#mobile-nav a {
-    text-decoration:none;
-    display:block;
-    padding: 10px;
-    border:1px solid #ccc;
-    border-width: 1px 1px 0 1px;
+
+    a {
+        text-decoration:none;
+        display:block;
+        padding: 10px;
+        border:1px solid #ccc;
+        border-width: 1px 1px 0 1px;
     }
-    
-#mobile-nav > a:first-child {
-    background:#fafafa;
-    cursor: pointer;
-}
-#mobile-nav a:hover { background:#fff; }
-#mobile-nav li.current a {
-    background:#fff;
-    color:#ff8000;
+
+    a:hover { background:#fff; }
+
+    & > a:first-child {
+        background:#fafafa;
+        cursor: pointer;
     }
-    
-#mobile-nav li ul a:before {
-    content: "-- ";
-}
-#mobile-nav li ul ul a:before {
-    content: "---- ";
+
+    li.current a {
+        background:#fff;
+        color:#ff8000;
+    }
+
+    li ul a:before {
+        content: "-- ";
+    }
+
+    li ul ul a:before {
+        content: "---- ";
+    }
+}    
+
+/* @end */
+
+/* @group ----- Home ----- */
+
+#home #primary, #home #secondary { padding: 0 20px; }
+
+#home #primary > div:last-of-type {
+    border-bottom: 1px solid #ccc;
+    @include trailer();
 }
 
 /* @end */
